--- a/devTinder-backend/.env
+++ b/devTinder-backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb+srv://tanmaysinghx:bRSlttZxP2eDwgqw@ts-cluster.zrpmnal.mongodb.net/?retryWrites=true&w=majority&appName=ts-cluster"
+DATABASE_URL=""
